examples/test/testpolicy18924.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18924
  namespace: namespace399
spec:
  podSelector:
    matchLabels:
      key37: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value42
          key33: value21
          key26: value12
      podSelector:
        matchLabels:
          key32: value9
          key40: value8
          key13: value6
